testdata/baselines/reference/submodule/conformance/jsdocTypeReferenceToValue.errors.txt
foo.js(1,13): error TS2749: 'Image' refers to a value, but is being used as a type here. Did you mean 'typeof Image'?


==== foo.js (1 errors) ====
    /** @param {Image} image */
                ~~~~~
!!! error TS2749: 'Image' refers to a value, but is being used as a type here. Did you mean 'typeof Image'?
    function process(image) {
        return new image(1, 1)
    }
    